# v3-bitget-api-sdk

bitget-python-sdk-api/: pyproject.toml
bitget-python-sdk-api/bitget/: bitget_api.py  client.py
bitget-python-sdk-api/bitget/v1/mix/: account_api.py  market_api.py  order_api.py
bitget-python-sdk-api/bitget/v1/spot/: account_api.py  market_api.py  order_api.py  wallet_api.py
bitget-python-sdk-api/bitget/v2/account/: account_api.py
bitget-python-sdk-api/bitget/v2/mix/: account_api.py  market_api.py  order_api.py
bitget-python-sdk-api/bitget/v2/spot/: account_api.py  market_api.py  order_api.py  wallet_api.py
bitget-python-sdk-api/bitget/ws/: bitget_ws_client.py
